Add more styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
 
     <!-- add todo form -->
     <div>
-      <form class="">
-        <div>
-            <input type="text" placeholder="Remember the milk...">
-            <button>Add</button>
+      <form>
+        <div class="todo-form">
+          <input class="todo-form__input" type="text" placeholder="Remember the milk...">
+          <button class="todo-form__button">Add</button>
         </div>
       </form>
     </div>
@@ -27,13 +27,13 @@
     <div>
       <ul class="todo-list">
         <li class="todo-list__item">
-          Remember the milk <i class="fa fa-times"></i>
+          Groceries <i class="fa fa-times"></i>
         </li>
         <li class="todo-list__item">
-          Find a job <i class="fa fa-times"></i>
+          Pick up the laundry <i class="fa fa-times"></i>
         </li>
         <li class="todo-list__item">
-          Get a life <i class="fa fa-times"></i>
+          Play through RDR1 <i class="fa fa-times"></i>
         </li>
         <li class="todo-list__item">
           Binge watch your favorite anime <i class="fa fa-times"></i>
