Add code to add new todo items to the list

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <form>
         <div class="todo-form">
           <input class="todo-form__input" type="text" placeholder="Remember the milk...">
-          <button class="todo-form__button">Add</button>
+          <button class="todo-form__button"><i class="fa fa-plus"></i> Add</button>
         </div>
       </form>
     </div>
