Add more styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vanilla Todo</title>
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,10 +15,10 @@
     <h1 class="app__title">Vanilla Todo</h1>
 
     <!-- add todo form -->
-    <div>
+    <div class="todo-form-wrapper">
       <form>
         <div class="todo-form">
-          <input class="todo-form__input" type="text" placeholder="Remember the milk...">
+          <input class="todo-form__input" type="text" placeholder="Remember...">
           <button class="todo-form__button"><i class="fa fa-plus"></i> Add</button>
         </div>
       </form>
@@ -41,6 +42,8 @@
       </ul>
     </div>
   </div>
+
+  <p class="image-credit">Photo by <a href="https://unsplash.com/@evgenievgenief">Evgeni Evgeniev</a> on Unsplash</p>
 
   <script src="app.js"></script>
 </body>
