Add remove item button

--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,16 @@
     <div>
       <ul class="todo-list">
         <li class="todo-list__item">
-          Groceries <a class="delete-item"><i class="fa fa-trash"></i></a>
+          Groceries <a class="remove-item"><i class="fa fa-trash"></i></a>
         </li>
         <li class="todo-list__item">
-          Pick up the laundry <a class="delete-item"><i class="fa fa-trash"></i></a>
+          Pick up the laundry <a class="remove-item"><i class="fa fa-trash"></i></a>
         </li>
         <li class="todo-list__item">
-          Play through RDR1 <a class="delete-item"><i class="fa fa-trash"></i></a>
+          Play through RDR1 <a class="remove-item"><i class="fa fa-trash"></i></a>
         </li>
         <li class="todo-list__item">
-          Binge watch your favorite anime <a class="delete-item"><i class="fa fa-trash"></i></a>
+          Binge watch your favorite anime <a class="remove-item"><i class="fa fa-trash"></i></a>
         </li>
       </ul>
     </div>
