Items are now stored and read from sessionStorage

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <!-- list todo items -->
     <div>
       <ul class="todo-list">
-        <li class="todo-list__item">
+        <!--<li class="todo-list__item">
           Groceries <a class="remove-item"><i class="fa fa-trash"></i></a>
         </li>
         <li class="todo-list__item">
@@ -38,7 +38,7 @@
         </li>
         <li class="todo-list__item">
           Binge watch your favorite anime <a class="remove-item"><i class="fa fa-trash"></i></a>
-        </li>
+        </li>-->
       </ul>
     </div>
   </div>
