Clean code and add few styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Vanilla Todo</title>
-  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -26,12 +28,12 @@
 
     <!-- list todo items -->
     <div>
-      <ul class="todo-list">
-      </ul>
+      <ul class="todo-list"></ul>
     </div>
   </div>
 
-  <p class="image-credit">Photo by <a href="https://unsplash.com/@evgenievgenief">Evgeni Evgeniev</a> on Unsplash</p>
+  <p class="image-credit">Photo by
+    <a href="https://unsplash.com/@evgenievgenief">Evgeni Evgeniev</a> on Unsplash</p>
 
   <script src="app.js"></script>
 </body>
